# tesis-project

./: .gitignore  README.md
app/: Makefile  pyproject.toml  requirements.txt
app/api/: main.py
app/api/config/: env_vars.py
app/api/constants/: constants.py
app/api/controllers/: get_image_data_controller.py  send_email_controller.py  tag_image_controller.py
app/api/endpoints/: email.py  tag.py
app/api/implementation/: get_image_data_repository_implementation.py  send_email_repository_implementation.py  tag_image_repository_implementation.py
app/api/models/: email_model.py
app/api/repositories/: get_image_data_repository.py  send_email_repository.py  tag_image_repository.py
app/api/use_cases/: get_image_data_use_case.py  send_email_use_case.py  tag_image_use_case.py
front/: package-lock.json  package.json
front/src/: App.vue  main.js  router.js
front/src/views/: PaginaContacto.vue  PaginaFamilias.vue  PaginaInicio.vue  PaginaReconocimiento.vue  PaginaResultado.vue
ui/: README.md  index.js  package-lock.json  package.json
ui/front/: package-lock.json  package.json
ui/front/public/: index.html
ui/front/src/: App.vue  router.js
ui/front/src/views/: EnvioExitoso.vue  ModalCargando.vue  PaginaContacto.vue  PaginaFamilias.vue  PaginaInicio.vue  PaginaReconocimiento.vue  PaginaResultado.vue
