[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = []
readme = "../README.md"

[tool.poetry.dependencies]
python = "^3.9.16"
fastapi = "^0.94.1"
mangum = "^0.17.0"
python-multipart = "0.0.9"
google-auth = "2.27.0"
google-auth-oauthlib = "1.2.0"
google-auth-httplib2 = "0.2.0"
google-api-python-client = "2.118.0"
python-dotenv = "1.0.1"

[tool.poetry.group.development.dependencies]
uvicorn = "^0.21.1"
